[gd_scene load_steps=9 format=3 uid="uid://d3cj827hlywc"]

[ext_resource type="Texture2D" uid="uid://dluv0sar0jw0x" path="res://asset/texture/menu/title.png" id="1_ao5fx"]
[ext_resource type="Script" path="res://script/menu/main_menu.gd" id="1_uregd"]
[ext_resource type="Texture2D" uid="uid://cjciilpynte11" path="res://asset/texture/menu/instruction.png" id="3_wdx04"]
[ext_resource type="LabelSettings" uid="uid://6y6x0ama3x0y" path="res://resource/labels.tres" id="4_8w1ke"]
[ext_resource type="AudioStream" uid="uid://cs1tkdb2b5kfd" path="res://asset/audio/sfx/money_get.wav" id="5_eaaq2"]
[ext_resource type="FontFile" uid="uid://deydtolohaa13" path="res://resource/Pixellari.ttf" id="6_j1xs4"]
[ext_resource type="PackedScene" uid="uid://b1v258teomkwc" path="res://obj/menu/settings_panel.tscn" id="7_sc5gb"]
[ext_resource type="PackedScene" uid="uid://c1gout75gvh0o" path="res://obj/menu/customise_panel.tscn" id="8_3oid6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uregd")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.25098, 0.0823529, 0.32549, 1)

[node name="CenterContainer" type="CenterContainer" parent="bg"]
layout_mode = 1
offset_right = 160.0
offset_bottom = 160.0
scale = Vector2(5, 5)

[node name="title" type="Control" parent="bg/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="bg/CenterContainer/title"]
position = Vector2(0, -30)
texture = ExtResource("1_ao5fx")

[node name="instruction" type="Control" parent="bg/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="bg/CenterContainer/instruction"]
texture = ExtResource("3_wdx04")

[node name="Credit" type="MarginContainer" parent="bg"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -96.0
offset_right = 258.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="bg/Credit"]
layout_mode = 2
text = "Game by DiamondDev
Music by GaboDabo
v0.0.0"
label_settings = ExtResource("4_8w1ke")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_eaaq2")
volume_db = -45.0

[node name="PressHForTutorial" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 296.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
text = "Press H for Tutorial"
label_settings = ExtResource("4_8w1ke")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_j1xs4")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="CustomiseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -70.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_j1xs4")
theme_override_font_sizes/font_size = 32
text = "Customise"

[node name="HowToPlayPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HowToPlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="HowToPlayPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("6_j1xs4")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]


[font_size=12](Press 'H' again to Exit)[/font_size]


[font_size=32]Money[/font_size]
Money is an integral part of NOT VERY CASH MONEY. It is required for almost all actions, from firing your weapon to moving.
Money can be obtained in a few ways:
[/center]
[ul bullet=-]
 Killing Enemies [ul bullet=-]
 Killing multiple enemies in quick succession without taking damage builds a combo. This combo multiplies the money you make from kills!
[/ul]
 Clearing Waves
 From Post-Wave Prizes
[/ul]

[center]
[font_size=32]Enemies[/font_size]
There are 5 types of Enemies in NOT VERY CASH MONEY:
[/center]
[ul bullet=-]
  Normal [ul bullet=-]
 Run-of-the-mill enemy
 Pretty average
 Blue in Color
[/ul]
 Aggressive [ul bullet=-]
 Slower, more agressive enemy
 Red in Color
[/ul]
 Skittish [ul bullet=-]
 Faster but weaker enemy
 Pink in Color
[/ul]
 Powerhouse [ul bullet=-]
 High Damage, Low Health
 Orange in Color
[/ul]
 Spray n' Pray [ul bullet=-]
 Fast firing, low damage, high spread
 Yellow in Color
[/ul]
[/ul]
[center]
But you never know! Maybe you'll encounter some [shake]surprises[/shake].. ;)

[font_size=32]Post-Wave Prizes[/font_size]
Completing waves gives you a choice between 3 prizes. Walking into the black orb at a prize will grant you it, as well as start the next wave.
The center prize will always be a cash reward. This cash value will scale as more waves are cleared.
Other prizes will be upgrades.

[font_size=32]The Shop[/font_size]
The shop is another way to obtain upgrades! The shop shows 3, one-time-purchase items at the end of every wave. These cost money, and this price scales as more items are bought.
The center item will always be to heal 40 HP.

[font_size=32]Upgrades[/font_size]
There are a multitude of different upgrades you can find in NOT VERY CASH MONEY. I won't list them all here, so you can go find them for yourself :P. Use these upgrades to your advantage to clear more and more waves!

-----------------------------------------------------------------------------

[font_size=32]Credits[/font_size]
[ul bullet=-]
 DiamondDev: Code, Sprites, Design
 GaboDabo: The amazing background music
 JSFXR: Sound Effects
 Jingle Jam 2024: The event this game was made for
 The Yogscast: For hosting the Jingle Jam
 The Godot Foundation: For creating Godot 4.3, the engine this game was made in
 Zacchary Dempsey-Plante: For their Pixellari font
[/ul]

This game was made in 1 week, for Jingle Jam Game Jam 2024, with the theme 'Everything has a Cost'.


Made in Scotland with <3
[font_size=32]
[img]res://asset/texture/ddv.png[/img]

[wave]Donate to Jingle Jam![/wave]
[i](when its running, obviously)[/i]

Thank you for playing NOT VERY CASH MONEY!
"

[node name="SettingsPanel" parent="." instance=ExtResource("7_sc5gb")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 800.0
offset_bottom = 800.0
grow_horizontal = 1
grow_vertical = 1

[node name="CustomisePanel" parent="." instance=ExtResource("8_3oid6")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 850.0
offset_top = 25.0
offset_right = 1550.0
offset_bottom = 775.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CustomiseButton" to="." method="_on_customise_button_pressed"]
[connection signal="close" from="SettingsPanel" to="." method="_on_settings_button_pressed"]
[connection signal="close" from="CustomisePanel" to="." method="_on_customise_button_pressed"]
[connection signal="start_game" from="CustomisePanel" to="." method="_on_customise_panel_start_game"]
